// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chart State utils should compute and format specifications for non stacked chart 1`] = `
Array [
  Object {
    "data": Array [
      Object {
        "datum": Object {
          "x": 0,
          "y": 1,
        },
        "initialY0": null,
        "initialY1": 1,
        "mark": null,
        "smH": undefined,
        "smV": undefined,
        "x": 0,
        "y0": null,
        "y1": 1,
      },
      Object {
        "datum": Object {
          "x": 1,
          "y": 2,
        },
        "initialY0": null,
        "initialY1": 2,
        "mark": null,
        "smH": undefined,
        "smV": undefined,
        "x": 1,
        "y0": null,
        "y1": 2,
      },
      Object {
        "datum": Object {
          "x": 2,
          "y": 10,
        },
        "initialY0": null,
        "initialY1": 10,
        "mark": null,
        "smH": undefined,
        "smV": undefined,
        "x": 2,
        "y0": null,
        "y1": 10,
      },
      Object {
        "datum": Object {
          "x": 3,
          "y": 6,
        },
        "initialY0": null,
        "initialY1": 6,
        "mark": null,
        "smH": undefined,
        "smV": undefined,
        "x": 3,
        "y0": null,
        "y1": 6,
      },
    ],
    "groupId": "group1",
    "insertIndex": 0,
    "isFiltered": false,
    "isStacked": false,
    "key": "groupId{group1}spec{spec1}yAccessor{y}splitAccessors{}",
    "seriesKeys": Array [
      "y",
    ],
    "seriesType": "line",
    "spec": Object {
      "chartType": "xy_axis",
      "data": Array [
        Object {
          "x": 0,
          "y": 1,
        },
        Object {
          "x": 1,
          "y": 2,
        },
        Object {
          "x": 2,
          "y": 10,
        },
        Object {
          "x": 3,
          "y": 6,
        },
      ],
      "groupId": "group1",
      "hideInLegend": false,
      "histogramModeAlignment": "center",
      "id": "spec1",
      "seriesType": "line",
      "specType": "series",
      "xAccessor": "x",
      "xScaleType": "linear",
      "yAccessors": Array [
        "y",
      ],
      "yScaleType": "log",
    },
    "specId": "spec1",
    "splitAccessors": Map {},
    "stackMode": undefined,
    "yAccessor": "y",
  },
  Object {
    "data": Array [
      Object {
        "datum": Object {
          "x": 0,
          "y": 1,
        },
        "initialY0": null,
        "initialY1": 1,
        "mark": null,
        "smH": undefined,
        "smV": undefined,
        "x": 0,
        "y0": null,
        "y1": 1,
      },
      Object {
        "datum": Object {
          "x": 1,
          "y": 2,
        },
        "initialY0": null,
        "initialY1": 2,
        "mark": null,
        "smH": undefined,
        "smV": undefined,
        "x": 1,
        "y0": null,
        "y1": 2,
      },
      Object {
        "datum": Object {
          "x": 2,
          "y": 10,
        },
        "initialY0": null,
        "initialY1": 10,
        "mark": null,
        "smH": undefined,
        "smV": undefined,
        "x": 2,
        "y0": null,
        "y1": 10,
      },
      Object {
        "datum": Object {
          "x": 3,
          "y": 6,
        },
        "initialY0": null,
        "initialY1": 6,
        "mark": null,
        "smH": undefined,
        "smV": undefined,
        "x": 3,
        "y0": null,
        "y1": 6,
      },
    ],
    "groupId": "group2",
    "insertIndex": 1,
    "isFiltered": false,
    "isStacked": false,
    "key": "groupId{group2}spec{spec2}yAccessor{y}splitAccessors{}",
    "seriesKeys": Array [
      "y",
    ],
    "seriesType": "line",
    "spec": Object {
      "chartType": "xy_axis",
      "data": Array [
        Object {
          "x": 0,
          "y": 1,
        },
        Object {
          "x": 1,
          "y": 2,
        },
        Object {
          "x": 2,
          "y": 10,
        },
        Object {
          "x": 3,
          "y": 6,
        },
      ],
      "groupId": "group2",
      "hideInLegend": false,
      "histogramModeAlignment": "center",
      "id": "spec2",
      "seriesType": "line",
      "specType": "series",
      "xAccessor": "x",
      "xScaleType": "linear",
      "yAccessors": Array [
        "y",
      ],
      "yScaleType": "log",
    },
    "specId": "spec2",
    "splitAccessors": Map {},
    "stackMode": undefined,
    "yAccessor": "y",
  },
]
`;

exports[`Chart State utils should compute and format specifications for stacked chart 1`] = `
Array [
  Object {
    "data": Array [
      Object {
        "datum": Object {
          "g": "a",
          "x": 0,
          "y": 1,
        },
        "filled": undefined,
        "initialY0": null,
        "initialY1": 1,
        "mark": null,
        "x": 0,
        "y0": 0,
        "y1": 1,
      },
      Object {
        "datum": Object {
          "g": "a",
          "x": 1,
          "y": 2,
        },
        "filled": undefined,
        "initialY0": null,
        "initialY1": 2,
        "mark": null,
        "x": 1,
        "y0": 0,
        "y1": 2,
      },
      Object {
        "datum": Object {
          "g": "a",
          "x": 2,
          "y": 3,
        },
        "filled": undefined,
        "initialY0": null,
        "initialY1": 3,
        "mark": null,
        "x": 2,
        "y0": 0,
        "y1": 3,
      },
      Object {
        "datum": Object {
          "g": "a",
          "x": 3,
          "y": 4,
        },
        "filled": undefined,
        "initialY0": null,
        "initialY1": 4,
        "mark": null,
        "x": 3,
        "y0": 0,
        "y1": 4,
      },
    ],
    "groupId": "group2",
    "insertIndex": 2,
    "isFiltered": false,
    "isStacked": true,
    "key": "groupId{group2}spec{spec2}yAccessor{y}splitAccessors{g-a}",
    "seriesKeys": Array [
      "a",
      "y",
    ],
    "seriesType": "line",
    "spec": Object {
      "chartType": "xy_axis",
      "data": Array [
        Object {
          "g": "a",
          "x": 0,
          "y": 1,
        },
        Object {
          "g": "b",
          "x": 0,
          "y": 2,
        },
        Object {
          "g": "a",
          "x": 1,
          "y": 2,
        },
        Object {
          "g": "b",
          "x": 1,
          "y": 3,
        },
        Object {
          "g": "a",
          "x": 2,
          "y": 3,
        },
        Object {
          "g": "b",
          "x": 2,
          "y": 4,
        },
        Object {
          "g": "a",
          "x": 3,
          "y": 4,
        },
        Object {
          "g": "b",
          "x": 3,
          "y": 5,
        },
      ],
      "groupId": "group2",
      "hideInLegend": false,
      "histogramModeAlignment": "center",
      "id": "spec2",
      "seriesType": "line",
      "specType": "series",
      "splitSeriesAccessors": Array [
        "g",
      ],
      "stackAccessors": Array [
        "x",
      ],
      "xAccessor": "x",
      "xScaleType": "linear",
      "yAccessors": Array [
        "y",
      ],
      "yScaleType": "log",
    },
    "specId": "spec2",
    "splitAccessors": Map {
      "g" => "a",
    },
    "stackMode": undefined,
    "yAccessor": "y",
  },
  Object {
    "data": Array [
      Object {
        "datum": Object {
          "g": "b",
          "x": 0,
          "y": 2,
        },
        "filled": undefined,
        "initialY0": null,
        "initialY1": 2,
        "mark": null,
        "x": 0,
        "y0": 1,
        "y1": 3,
      },
      Object {
        "datum": Object {
          "g": "b",
          "x": 1,
          "y": 3,
        },
        "filled": undefined,
        "initialY0": null,
        "initialY1": 3,
        "mark": null,
        "x": 1,
        "y0": 2,
        "y1": 5,
      },
      Object {
        "datum": Object {
          "g": "b",
          "x": 2,
          "y": 4,
        },
        "filled": undefined,
        "initialY0": null,
        "initialY1": 4,
        "mark": null,
        "x": 2,
        "y0": 3,
        "y1": 7,
      },
      Object {
        "datum": Object {
          "g": "b",
          "x": 3,
          "y": 5,
        },
        "filled": undefined,
        "initialY0": null,
        "initialY1": 5,
        "mark": null,
        "x": 3,
        "y0": 4,
        "y1": 9,
      },
    ],
    "groupId": "group2",
    "insertIndex": 3,
    "isFiltered": false,
    "isStacked": true,
    "key": "groupId{group2}spec{spec2}yAccessor{y}splitAccessors{g-b}",
    "seriesKeys": Array [
      "b",
      "y",
    ],
    "seriesType": "line",
    "spec": Object {
      "chartType": "xy_axis",
      "data": Array [
        Object {
          "g": "a",
          "x": 0,
          "y": 1,
        },
        Object {
          "g": "b",
          "x": 0,
          "y": 2,
        },
        Object {
          "g": "a",
          "x": 1,
          "y": 2,
        },
        Object {
          "g": "b",
          "x": 1,
          "y": 3,
        },
        Object {
          "g": "a",
          "x": 2,
          "y": 3,
        },
        Object {
          "g": "b",
          "x": 2,
          "y": 4,
        },
        Object {
          "g": "a",
          "x": 3,
          "y": 4,
        },
        Object {
          "g": "b",
          "x": 3,
          "y": 5,
        },
      ],
      "groupId": "group2",
      "hideInLegend": false,
      "histogramModeAlignment": "center",
      "id": "spec2",
      "seriesType": "line",
      "specType": "series",
      "splitSeriesAccessors": Array [
        "g",
      ],
      "stackAccessors": Array [
        "x",
      ],
      "xAccessor": "x",
      "xScaleType": "linear",
      "yAccessors": Array [
        "y",
      ],
      "yScaleType": "log",
    },
    "specId": "spec2",
    "splitAccessors": Map {
      "g" => "b",
    },
    "stackMode": undefined,
    "yAccessor": "y",
  },
]
`;

exports[`Chart State utils should compute and format specifications for stacked chart 2`] = `
Array [
  Object {
    "data": Array [
      Object {
        "datum": Object {
          "g": "a",
          "x": 0,
          "y": 1,
        },
        "initialY0": null,
        "initialY1": 1,
        "mark": null,
        "smH": undefined,
        "smV": undefined,
        "x": 0,
        "y0": null,
        "y1": 1,
      },
      Object {
        "datum": Object {
          "g": "a",
          "x": 1,
          "y": 2,
        },
        "initialY0": null,
        "initialY1": 2,
        "mark": null,
        "smH": undefined,
        "smV": undefined,
        "x": 1,
        "y0": null,
        "y1": 2,
      },
      Object {
        "datum": Object {
          "g": "a",
          "x": 2,
          "y": 3,
        },
        "initialY0": null,
        "initialY1": 3,
        "mark": null,
        "smH": undefined,
        "smV": undefined,
        "x": 2,
        "y0": null,
        "y1": 3,
      },
      Object {
        "datum": Object {
          "g": "a",
          "x": 3,
          "y": 4,
        },
        "initialY0": null,
        "initialY1": 4,
        "mark": null,
        "smH": undefined,
        "smV": undefined,
        "x": 3,
        "y0": null,
        "y1": 4,
      },
    ],
    "groupId": "group1",
    "insertIndex": 0,
    "isFiltered": false,
    "isStacked": false,
    "key": "groupId{group1}spec{spec1}yAccessor{y}splitAccessors{g-a}",
    "seriesKeys": Array [
      "a",
      "y",
    ],
    "seriesType": "line",
    "spec": Object {
      "chartType": "xy_axis",
      "data": Array [
        Object {
          "g": "a",
          "x": 0,
          "y": 1,
        },
        Object {
          "g": "b",
          "x": 0,
          "y": 2,
        },
        Object {
          "g": "a",
          "x": 1,
          "y": 2,
        },
        Object {
          "g": "b",
          "x": 1,
          "y": 3,
        },
        Object {
          "g": "a",
          "x": 2,
          "y": 3,
        },
        Object {
          "g": "b",
          "x": 2,
          "y": 4,
        },
        Object {
          "g": "a",
          "x": 3,
          "y": 4,
        },
        Object {
          "g": "b",
          "x": 3,
          "y": 5,
        },
      ],
      "groupId": "group1",
      "hideInLegend": false,
      "histogramModeAlignment": "center",
      "id": "spec1",
      "seriesType": "line",
      "specType": "series",
      "splitSeriesAccessors": Array [
        "g",
      ],
      "xAccessor": "x",
      "xScaleType": "linear",
      "yAccessors": Array [
        "y",
      ],
      "yScaleType": "log",
    },
    "specId": "spec1",
    "splitAccessors": Map {
      "g" => "a",
    },
    "stackMode": undefined,
    "yAccessor": "y",
  },
  Object {
    "data": Array [
      Object {
        "datum": Object {
          "g": "b",
          "x": 0,
          "y": 2,
        },
        "initialY0": null,
        "initialY1": 2,
        "mark": null,
        "smH": undefined,
        "smV": undefined,
        "x": 0,
        "y0": null,
        "y1": 2,
      },
      Object {
        "datum": Object {
          "g": "b",
          "x": 1,
          "y": 3,
        },
        "initialY0": null,
        "initialY1": 3,
        "mark": null,
        "smH": undefined,
        "smV": undefined,
        "x": 1,
        "y0": null,
        "y1": 3,
      },
      Object {
        "datum": Object {
          "g": "b",
          "x": 2,
          "y": 4,
        },
        "initialY0": null,
        "initialY1": 4,
        "mark": null,
        "smH": undefined,
        "smV": undefined,
        "x": 2,
        "y0": null,
        "y1": 4,
      },
      Object {
        "datum": Object {
          "g": "b",
          "x": 3,
          "y": 5,
        },
        "initialY0": null,
        "initialY1": 5,
        "mark": null,
        "smH": undefined,
        "smV": undefined,
        "x": 3,
        "y0": null,
        "y1": 5,
      },
    ],
    "groupId": "group1",
    "insertIndex": 1,
    "isFiltered": false,
    "isStacked": false,
    "key": "groupId{group1}spec{spec1}yAccessor{y}splitAccessors{g-b}",
    "seriesKeys": Array [
      "b",
      "y",
    ],
    "seriesType": "line",
    "spec": Object {
      "chartType": "xy_axis",
      "data": Array [
        Object {
          "g": "a",
          "x": 0,
          "y": 1,
        },
        Object {
          "g": "b",
          "x": 0,
          "y": 2,
        },
        Object {
          "g": "a",
          "x": 1,
          "y": 2,
        },
        Object {
          "g": "b",
          "x": 1,
          "y": 3,
        },
        Object {
          "g": "a",
          "x": 2,
          "y": 3,
        },
        Object {
          "g": "b",
          "x": 2,
          "y": 4,
        },
        Object {
          "g": "a",
          "x": 3,
          "y": 4,
        },
        Object {
          "g": "b",
          "x": 3,
          "y": 5,
        },
      ],
      "groupId": "group1",
      "hideInLegend": false,
      "histogramModeAlignment": "center",
      "id": "spec1",
      "seriesType": "line",
      "specType": "series",
      "splitSeriesAccessors": Array [
        "g",
      ],
      "xAccessor": "x",
      "xScaleType": "linear",
      "yAccessors": Array [
        "y",
      ],
      "yScaleType": "log",
    },
    "specId": "spec1",
    "splitAccessors": Map {
      "g" => "b",
    },
    "stackMode": undefined,
    "yAccessor": "y",
  },
]
`;
